[package]
edition = "2021"
name = "embassy-rp-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
#embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
#embassy-usb = { version = "0.1.0", features = ["defmt"] }
#embassy-net = { version = "0.2.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
#embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
#embassy-futures = { version = "0.1.0" }
#embassy-usb-logger = { version = "0.1.0" }
cyw43 = { version = "0.1.0" }
cyw43-pio = { version = "0.1.0" }


defmt = "0.3"
defmt-rtt = "0.4"
#fixed = "1.23.1"
#fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
#display-interface-spi = "0.4.1"
#embedded-graphics = "0.8.1"
#st7789 = "0.7.0"
#display-interface = "0.4.1"
#byte-slice-cast = { version = "1.2.0", default-features = false }
#smart-leds = "0.3.0"
#heapless = "0.8"
#usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "=0.2.7" }
#embedded-hal-async = "1.0.0-rc.3"
#embedded-hal-bus = { version = "0.1.0-rc.3", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2.0.0" }
#portable-atomic = { version = "1.5", features = ["critical-section"] }
#log = "0.4"
#pio-proc = "0.2"
#pio = "0.2.1"
#rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
#static_cell = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "03325ea81be84a0472fe66d743afb064eed6b904" }